--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkDetail.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkDetail.xaml
@@ -73,13 +73,21 @@
         <ComboBox Grid.Column="0" Grid.Row="1"
             Width="320" Margin="0,20,0,0" x:Name="CbCarBrand" DisplayMemberPath="NameCarBrand"
             SelectedItem="{Binding SelectedCarBrand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            ItemsSource="{Binding NameCarBrandComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             materialDesign:HintAssist.Hint="Выберите марку автомобиля" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
+
+        <Button
+          Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Center" Margin="-470,20,0,0"
+          HorizontalAlignment="Center"
+          Content="Очистить" Click="clearCarBrandAndCarModel"
+          Background="Gray" BorderBrush="Black" />
 
         <!--выбор модели авто-->
         <ComboBox Grid.Column="0" Grid.Row="2"
             Width="320" Margin="0,20,0,0" x:Name="CbCarModel" DisplayMemberPath="NameCarModel"
             SelectedItem="{Binding SelectedCarModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            ItemsSource="{Binding NameCarModelComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             materialDesign:HintAssist.Hint="Выберите модель автомобиля" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
@@ -87,35 +95,53 @@
         <ComboBox Grid.Column="0" Grid.Row="3"
             Width="320" Margin="0,20,0,0" x:Name="CbUnit" DisplayMemberPath="NameUnit"
             SelectedItem="{Binding SelectedUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            ItemsSource="{Binding NameUnitComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             materialDesign:HintAssist.Hint="Выберите агрегат автомобиля" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
+        <Button
+          Grid.Column="0" Grid.Row="3" Grid.RowSpan="2" VerticalAlignment="Center" Margin="-470,20,0,0"
+          HorizontalAlignment="Center"
+          Content="Очистить" Click="clearKnotAndUnit"
+          Background="Gray" BorderBrush="Black" />
+
         <!--выбор узла-->
         <ComboBox Grid.Column="0" Grid.Row="4"
-            Width="320" Margin="0,20,0,0" x:Name="CbKnot" DisplayMemberPath="NameKnot"
-            SelectedItem="{Binding SelectedKnot, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            Width="320" Margin="0,20,0,0" x:Name="CbKnot"
+            ItemsSource="{Binding NameKnotComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedKnot, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+            DisplayMemberPath="NameKnot"
             materialDesign:HintAssist.Hint="Выберите узел автомобиля" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
         <!--выберите страна-->
-        <ComboBox Grid.Column="0" Grid.Row="5" x:Name="CbCountry" ItemsSource="{Binding NameCountryComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            SelectedItem="{Binding SelectedCountry, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="NameCountry"
-            Text="{Binding SelectedCountryName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+        <ComboBox Grid.Column="0" Grid.Row="5" x:Name="CbCountry" 
+            ItemsSource="{Binding NameCountryComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedCountry, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+            DisplayMemberPath="NameCountry"
             Width="320" Margin="0,20,0,0"
             materialDesign:HintAssist.Hint="Выберите страну производства" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-
+        
+        <!--очищаем поле производитель и фабрика, чтобы можно было заново выбрать данные-->
+        <Button
+          Grid.Column="0" Grid.Row="5" Grid.RowSpan="2" VerticalAlignment="Center" Margin="-470,20,0,0"
+          HorizontalAlignment="Center"
+          Content="Очистить"  Click="clearManufactureAndCountry"
+          Background="Gray" BorderBrush="Black" />
+        
         <!--выберите производителя-->
-        <ComboBox Grid.Column="0" Grid.Row="6" x:Name="CbManufacture" ItemsSource="{Binding NameManufactureComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            SelectedItem="{Binding SelectedManufacture, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  DisplayMemberPath="NameManufacture"
+        <ComboBox Grid.Column="0" Grid.Row="6" x:Name="CbManufacture" 
+            ItemsSource="{Binding NameManufactureComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedManufacture, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+            DisplayMemberPath="NameManufacture"
             Width="320" Margin="0,20,0,0"
             materialDesign:HintAssist.Hint="Выберите производителя" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
         <!--название детали-->
         <TextBox Grid.Row="1" Grid.Column="1" x:Name="NameAutopart" Height="50" Margin="0,20,0,0"
-             VerticalAlignment="Center" HorizontalAlignment="Center"
-             Text="{Binding OutAutopart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
+             VerticalAlignment="Center" HorizontalAlignment="Center" 
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
              materialDesign:HintAssist.Hint="Введите название датели" 
@@ -131,8 +157,7 @@
 
         <!--цена-->
         <TextBox Grid.Row="2" Grid.Column="1" x:Name="PriceSale" Height="50" Margin="0,20,0,0"
-             VerticalAlignment="Center" HorizontalAlignment="Center"
-             Text="{Binding OutPriceSale, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
+             VerticalAlignment="Center" HorizontalAlignment="Center"  
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
              materialDesign:HintAssist.Hint="Введите цену" 
@@ -141,8 +166,7 @@
 
         <!--кол-во на складе-->
         <TextBox Grid.Row="3" Grid.Column="1" x:Name="AvailableityStock" Height="50" Margin="0,20,0,0"
-             VerticalAlignment="Center" HorizontalAlignment="Center"
-             Text="{Binding OutAvailableityStock, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
+             VerticalAlignment="Center" HorizontalAlignment="Center"  
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
              materialDesign:HintAssist.Hint="Количество на складе" 
