--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAutoparts.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAutoparts.xaml
@@ -38,7 +38,9 @@
 
         <!--название-->
         <!--Список запчастей автомобиля-->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список запчастей автомобиля" FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="0,40,0,40" VerticalAlignment="Center"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список запчастей автомобиля" 
+                   FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" 
+                   Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--кнопка аналогов-->
         <Button Grid.Row="1" Grid.Column="0" Content="Подбор аналогов" MinWidth="330" Height="35" 
