--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAnalogues.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAnalogues.xaml
@@ -5,11 +5,16 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:sparePartsStore.View.ViewAdministrator.ViewWorkingWithData"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:ViewModel="clr-namespace:sparePartsStore.ViewModel"
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
+    <Page.Resources>
+        <ViewModel:ListAnaloguesViewModel x:Key="ListAnaloguesViewModel"/>
+    </Page.Resources>
+
     <!--аналоги-->
-    <Grid Background="White" Margin="50,0,50,0">
+    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListAnaloguesViewModel}">
 
         <!--стили-->
         <Grid.Resources>
@@ -39,29 +44,38 @@
         </StackPanel>
         
         <!--таблица с подобранными аналогами-->
-        <Grid Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left">
-
-            <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                <DataGrid
-                    HorizontalAlignment="Center"
+        <Grid Grid.Row="1" Margin="0,40,0,0">
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                <DataGrid IsReadOnly="True"
+                    RowHeight="50" FontSize="10"
                     AutoGenerateColumns="False"
+                    CellStyle="{StaticResource DataGridCellStyle}"
+                    ItemsSource="{Binding ListAutopartDPO}"
+                    SelectedItem="{Binding SelectedAutopart}"
                     Style="{StaticResource MaterialDesignDataGrid}"
-                    ColumnHeaderStyle="{StaticResource columnTable}">
+                    ColumnHeaderStyle="{StaticResource columnTableHeaderAutoParts}">
+
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Номер" Binding="{Binding numberParts}" MinWidth="100"/>
-                        <DataGridTextColumn Header="Название" Binding="{Binding numberParts}" MinWidth="100"/>
-                        <DataGridTextColumn Header="Агрегат" Binding="{Binding numberParts}" MinWidth="100"/>
-                        <DataGridTextColumn Header="Узел" Binding="{Binding numberParts}" MinWidth="100"/>
-                        <DataGridTextColumn Header="Марка" Binding="{Binding numberParts}" MinWidth="100"/>
-                        <DataGridTextColumn Header="Модель" Binding="{Binding numberParts}" MinWidth="100"/>
-                        <DataGridTextColumn Header="Поставщик" Binding="{Binding numberParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Номер" Binding="{Binding NumberAutopart}" Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Название" Binding="{Binding NameAutopart}" Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Агрегат" Binding="{Binding NameUnit}" Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Узел" Binding="{Binding NameKnot}"  Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Марка" Binding="{Binding CarBrandName}"  Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Модель" Binding="{Binding NameCarModel}" Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Производитель" Binding="{Binding NameManufacture}" Width="*" IsReadOnly="True"/>
                     </DataGrid.Columns>
+
                 </DataGrid>
             </ScrollViewer>
-        
         </Grid>
-        
+
         <!--кнопка удалить-->
         <Button Grid.Row="1" Grid.Column="1" Content="Удалить" MinWidth="100" MaxWidth="200" Height="35" Background="Gray" BorderBrush="Black" Margin="50,0,0,0" HorizontalAlignment="Right"/>
 
@@ -92,25 +106,36 @@
         <!--таблица запчастей-->
         <Grid Grid.Row="3" Grid.ColumnSpan="2">
 
-            <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                <DataGrid
-                    HorizontalAlignment="Center"
-                    AutoGenerateColumns="False"
-                    Style="{StaticResource MaterialDesignDataGrid}"
-                    ColumnHeaderStyle="{StaticResource columnTable}">
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                <DataGrid IsReadOnly="True"
+        RowHeight="50" FontSize="10"
+        AutoGenerateColumns="False"
+        CellStyle="{StaticResource DataGridCellStyle}"
+        ItemsSource="{Binding ListAutopartDPO}"
+        SelectedItem="{Binding SelectedAutopart}"
+        Style="{StaticResource MaterialDesignDataGrid}"
+        ColumnHeaderStyle="{StaticResource columnTableHeaderAutoParts}">
+
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Номер" Binding="{Binding numberParts}" MinWidth="150"/>
-                        <DataGridTextColumn Header="Название" Binding="{Binding numberParts}" MinWidth="200"/>
-                        <DataGridTextColumn Header="Агрегат" Binding="{Binding numberParts}" MinWidth="150"/>
-                        <DataGridTextColumn Header="Узел" Binding="{Binding numberParts}" MinWidth="150"/>
-                        <DataGridTextColumn Header="Марка" Binding="{Binding numberParts}" MinWidth="150"/>
-                        <DataGridTextColumn Header="Модель" Binding="{Binding numberParts}" MinWidth="150"/>
-                        <DataGridTextColumn Header="Поставщик" Binding="{Binding numberParts}" MinWidth="150"/>
+                        <DataGridTextColumn Header="Номер" Binding="{Binding NumberAutopart}" Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Название" Binding="{Binding NameAutopart}" Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Агрегат" Binding="{Binding NameUnit}" Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Узел" Binding="{Binding NameKnot}"  Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Марка" Binding="{Binding CarBrandName}"  Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Модель" Binding="{Binding NameCarModel}" Width="*" IsReadOnly="True"/>
+
+                        <DataGridTextColumn Header="Производитель" Binding="{Binding NameManufacture}" Width="*" IsReadOnly="True"/>
                     </DataGrid.Columns>
+
                 </DataGrid>
             </ScrollViewer>
-            
+
         </Grid>
         
     </Grid>
