--- a/sparePartsStore/View/ViewAdministrator/ViewSettingRole/PageSettings.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewSettingRole/PageSettings.xaml
@@ -49,7 +49,7 @@
         <!--Popup-->
 
         <Grid>
-            <Popup x:Name="DeletePopup" PlacementTarget="{Binding ElementName=positionPopup}" Placement="Center" Grid.ColumnSpan="3" Grid.RowSpan="3" HorizontalOffset="0" VerticalOffset="160" StaysOpen="False" Closed="MyPopup_Closed" AllowsTransparency="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Popup x:Name="DeletePopup" PlacementTarget="{Binding ElementName=positionPopup}" Placement="Center" Grid.ColumnSpan="3" Grid.RowSpan="3" HorizontalOffset="0" VerticalOffset="-40" StaysOpen="False" Closed="MyPopup_Closed" AllowsTransparency="False" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Grid Background="Gray">
                     <!--фон-->
                     <Border Background="AliceBlue" Style="{StaticResource OutlineOfPopup}" >
@@ -68,7 +68,7 @@
                                 <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Text="Выход из аккаунта" Margin="0, 10, 0, 0" FontSize="30" FontWeight="Bold"/>
 
                                 <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center" Height="130" Margin="10,20,10,0">
-                                    <TextBlock Text="Вы действительно хотите выйти из аккаунта?" FontSize="20" FontWeight="DemiBold" HorizontalAlignment="Center"/>
+                                    <TextBlock Text="Вы действительно хотите выйти из аккаунта?" FontSize="20" FontWeight="DemiBold" HorizontalAlignment="Center" TextWrapping="Wrap" Height="60"/>
                                 </StackPanel>
 
                                 <Grid Grid.Row="2" Grid.Column="0" Margin="0,0,0,0" VerticalAlignment="Bottom">
